plugins {
	id 'org.springframework.boot' version '2.7.1'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
	id "com.microsoft.azure.azurewebapp" version "1.1.0"
}

group = 'com.rainmaker'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation('nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect')
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation platform('com.google.cloud:libraries-bom:26.0.0')
	implementation group: 'com.microsoft.sqlserver', name: 'mssql-jdbc', version: '6.1.0.jre7'
}

tasks.named('test') {
	useJUnitPlatform()
}

azurewebapp {
    subscription = '0d021892-6a06-4807-a518-9cea938b4dfd'
    resourceGroup = 'MainProjectResourceGroup'
    appName = 'spring-api-server'
    pricingTier = 'F1' 
    region = 'koreacentral' 
    runtime {
        os = 'Windows' 
        webContainer = 'Java SE'
        javaVersion = 'Java 17'
    }
}